<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cubic</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello">Hello World !! Welcome to Cubic</string>
    <string name="title_activity_home">Cubic</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_practice">Practice</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to cubic, a new and improved speller application</string>
    <string name="title_activity_practice">Practice</string>
    <string name="title_activity_selectlevel">Select Level</string>   
    <string name="learn_text">Enter word and click submit to get pronunication and definition</string>
    <string name="enter_word">Enter word</string>
    <string name="title_activity_learn">Learn</string>
    <string name="word_sound">pronunce word</string>
    <string name="b_learn_value">Learn</string>
    <string name="definition_text">Definition :</string>
    <string name="text_practice_instruction">Listen to the word pronunciation and then enter its spelling. To repeat pronunication, click on the sound icon.</string>
    <string name="text_pronunciation">Pronunciation :</string>
    <string name="spell_word">Spell word</string>
    <string name="b_check_value">Check</string>
    <string name="btn_next_word">Next Word ></string>

</resources>