<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_practice_instruction" />

<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/spellWordInput"
    android:layout_alignBottom="@+id/spellWordInput"
    android:layout_toRightOf="@+id/spellWordInput"
    android:onClick="submitCheck"
    android:text="@string/b_check_value" />

<EditText
    android:id="@+id/spellWordInput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/playIcon"
    android:ems="10"
    android:hint="@string/spell_word"
    android:inputType="text|textFilter"
    android:maxLines="1"
    android:textAllCaps="@bool/b_false" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/button1"
    android:layout_alignParentLeft="true"
    android:text="@string/text_pronunciation"
    android:textSize="@dimen/text_24dp" />

<ImageView
    android:id="@+id/playIcon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView1"
    android:layout_marginLeft="24dp"
    android:layout_toRightOf="@+id/textView2"
    android:contentDescription="@string/text_pronunciation"
    android:onClick="replayWord"
    android:src="@drawable/ic_speaker" />

<TextView
    android:id="@+id/textViewStatus"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/button1"
    android:layout_marginTop="26dp" 
    android:textIsSelectable="true"/>

<Button
    android:id="@+id/buttonNextWord"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/textViewStatus"
    android:onClick="loadNextWord"
    android:text="@string/btn_next_word" />

</RelativeLayout>