<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LearnActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_text" />

    <EditText
        android:id="@+id/newWordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_word"
        android:inputType="text"
        android:maxLines="1"
        android:textAllCaps="@bool/b_false" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newWordInput"
        android:layout_alignBottom="@+id/newWordInput"
        android:layout_toRightOf="@+id/newWordInput"
        android:onClick="learnNewWord"
        android:text="@string/b_learn_value" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newWordInput"
        android:layout_below="@+id/newWordInput"
        android:layout_marginTop="17dp"
        android:text="@string/definition_text" />

    <TextView
        android:id="@+id/definitionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:text="" />

    <ImageView
        android:id="@+id/playIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newWordInput"
        android:layout_centerHorizontal="true"
        android:contentDescription="pronunication"
        android:onClick="playWord"
        android:src="@drawable/ic_speaker" />

</RelativeLayout>